--- a/Functional_Groups_Simulation.ipynb
+++ b/Functional_Groups_Simulation.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0xF6eTfOhNA1"
       },
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "owr4OLYxhNA5"
       },
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "s30Jrqug93Kr"
       },
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "DY2Dyw3D7GEp"
       },
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "9mVp0-0HcUPz"
       },
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "e2jZTzkWBIsF"
       },
@@ -258,12 +258,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "mg_lfxpShNBG"
       },
       "outputs": [],
       "source": [
+        "# get segments and segment lengths for generating synapses\n",
         "all_segments, all_len_per_segment, all_SA_per_segment,\\\n",
         "all_segments_center, soma_segments, soma_len_per_segment,\\\n",
         "soma_SA_per_segment, soma_segments_center, no_soma_segments,\\\n",
@@ -276,12 +277,21 @@
         "id": "M8zHftvchNBG"
       },
       "source": [
-        "#### Excitatory"
+        "#### Add Excitatory synapses using synapse generator"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Parameters for excitatory synapses"
+      ],
+      "metadata": {
+        "id": "B_cvzP48dryK"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "LnYE6blI8nOl"
       },
@@ -299,48 +309,25 @@
         "\tval = np.random.lognormal(gmax_mean, gmax_std, size)\n",
         "\ts = float(np.clip(val, 0, 0.7))\n",
         "\treturn s\n",
-        "\n",
         "gmax_exc_dist = partial(log_norm_dist, gmax_mean, gmax_std, size = 1)\n",
         "\n",
-        "# Excitatory firing rate distribution\n",
+        "# Excitatory presynaptic cell mean firing rate distribution\n",
         "def exp_levy_dist(alpha = 1.37, beta = -1.00, loc = 0.92, scale = 0.44, size = 1):\n",
-        "\treturn np.exp(st.levy_stable.rvs(alpha = alpha, beta = beta, loc = loc, scale = scale, size = size)) + 1e-15"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "id": "3MMaeMeahNBH"
-      },
-      "outputs": [],
-      "source": [
-        "spike_generator = SpikeGenerator()\n",
-        "synapse_generator = SynapseGenerator()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "id": "YyTuAQoOhNBH"
-      },
-      "outputs": [],
-      "source": [
+        "\treturn np.exp(st.levy_stable.rvs(alpha = alpha, beta = beta, loc = loc, scale = scale, size = size)) + 1e-15\n",
+        "mean_fr_dist = partial(exp_levy_dist, alpha = 1.37, beta = -1.00, loc = 0.92, scale = 0.44, size = 1)\n",
+        "\n",
+        "\n",
+        "# get number of functional groups, presynaptic cells per functional group, and synapses per presynaptic cell.\n",
+        "# functional groups contain correlated presynaptic cells. presynaptic cells form clusters of multiples synapses.\n",
         "synaptic_density = 2.12\n",
         "functional_group_span = 100\n",
         "cluster_span = 10\n",
         "synapses_per_cluster = 5\n",
-        "\n",
         "number_of_groups = int(sum(all_len_per_segment) / functional_group_span)\n",
-        "\n",
-        "# Number of presynaptic cells\n",
         "cells_per_group = int(functional_group_span*synaptic_density / synapses_per_cluster)\n",
         "\n",
-        "# Distribution of mean firing rates\n",
-        "mean_fr_dist = partial(exp_levy_dist, alpha = 1.37, beta = -1.00, loc = 0.92, scale = 0.44, size = 1)\n",
         "\n",
-        "# New list to change probabilty of exc functional group nearing soma\n",
+        "# Optional list to change probabilty of exc functional group nearing soma\n",
         "adjusted_no_soma_len_per_segment = []\n",
         "for i, seg in enumerate(no_soma_segments):\n",
         "    if h.distance(seg, complex_cell.soma[0](0.5)) < 75:\n",
@@ -350,13 +337,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Generate Excitatory Synapses"
+      ],
+      "metadata": {
+        "id": "RG8jFtexdqWf"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "NIClLEpHhNBH"
       },
       "outputs": [],
       "source": [
+        "spike_generator = SpikeGenerator()\n",
+        "synapse_generator = SynapseGenerator()\n",
         "exc_functional_groups = generate_excitatory_functional_groups(all_segments = no_soma_segments,\n",
         "                                                              all_len_per_segment = no_soma_len_per_segment,\n",
         "                                                              all_segments_centers = no_soma_segments_center,\n",
@@ -375,8 +373,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Save excitatory spike trains to modulate inhibitory spike trains"
+      ],
+      "metadata": {
+        "id": "rbJGyG2lgEpR"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "yWm5ivBSBdaH"
       },
@@ -391,25 +398,18 @@
         "id": "2WtbYMI7hNBI"
       },
       "source": [
-        "#### Inhibitory"
+        "#### Add Inhibitory synapses using synapse generator"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "06AG9jiPv5BR"
       },
       "outputs": [],
       "source": [
-        "synaptic_density = 0.22\n",
-        "cluster_span = 10\n",
-        "\n",
-        "synapses = synaptic_density * sum(all_len_per_segment)\n",
-        "number_of_clusters = int(sum(all_len_per_segment) / cluster_span)\n",
-        "synapses_per_cluster = int(cluster_span * synaptic_density) # 12 # synapses/number_of_clusters\n",
-        "# synapses_per_node = 5\n",
-        "# number_of_clusters=int(synapses / (cluster_span * synaptic_density)) # number of presynaptic cells\n",
+        "# distributed synapses\n",
         "\n",
         "# Proximal inh mean_fr distribution\n",
         "mean_fr, std_fr = 16.9, 14.3\n",
@@ -421,8 +421,19 @@
         "a, b = (0 - mean_fr) / std_fr, (100 - mean_fr) / std_fr\n",
         "distal_inh_dist = partial(st.truncnorm.rvs, a = a, b = b, loc = mean_fr, scale = std_fr)\n",
         "\n",
-        "gmax_inh_dist = 2.25 #1.65 # need inh gmax distribution}\n",
+        "# weight distribution\n",
+        "gmax_inh_dist = 2.25 #1.65 # need inh gmax distribution\n",
+        "\n",
+        "# get number of functional groups, presynaptic cells per functional group, and synapses per presynaptic cell.\n",
+        "# functional groups contain correlated presynaptic cells. presynaptic cells form clusters of multiples synapses.\n",
         "number_of_groups = 1\n",
+        "synaptic_density = 0.22\n",
+        "cluster_span = 10\n",
+        "synapses = synaptic_density * sum(all_len_per_segment)\n",
+        "number_of_clusters = int(sum(all_len_per_segment) / cluster_span)\n",
+        "synapses_per_cluster = int(cluster_span * synaptic_density) # 12 # synapses/number_of_clusters\n",
+        "# synapses_per_node = 5\n",
+        "# number_of_clusters=int(synapses / (cluster_span * synaptic_density)) # number of presynaptic cells\n",
         "\n",
         "inhibitory_functional_groups = generate_inhibitory_functional_groups(cell = complex_cell,\n",
         "                                                                     all_segments = all_segments,\n",
@@ -446,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "yygFGml3Xhc1"
       },
@@ -480,12 +491,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "iOOKIqGTVGG8"
       },
       "outputs": [],
       "source": [
+        "# combine lists of synapses that have been generated to pass to CellModel class\n",
         "all_syns = []\n",
         "for synapse_list in synapse_generator.synapses: # synapse_generator.synapses is a list of synapse lists\n",
         "    for synapse in synapse_list:\n",
@@ -494,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -520,20 +532,22 @@
         }
       ],
       "source": [
-        "for mech in complex_cell.soma[0](0.5):\n",
-        "  # if str(mech) in ['NaTa_t','Nap_Et2','SKv3_1','SK_E2','pas']:\n",
-        "  if not 'ion' in str(mech):\n",
-        "      for att in dir(mech):\n",
-        "        # print(att)\n",
-        "        if '__' in att:\n",
-        "          continue\n",
-        "        elif 'bar' in str(att):\n",
-        "          print(str(att)+'_'+str(mech))"
+        "# check channels\n",
+        "\n",
+        "# for mech in complex_cell.soma[0](0.5):\n",
+        "#   # if str(mech) in ['NaTa_t','Nap_Et2','SKv3_1','SK_E2','pas']:\n",
+        "#   if not 'ion' in str(mech):\n",
+        "#       for att in dir(mech):\n",
+        "#         # print(att)\n",
+        "#         if '__' in att:\n",
+        "#           continue\n",
+        "#         elif 'bar' in str(att):\n",
+        "#           print(str(att)+'_'+str(mech))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -552,6 +566,7 @@
         }
       ],
       "source": [
+        "# use CellModel class to store and record simulation data.\n",
         "cell = CellModel(hoc_model = complex_cell, synapses = all_syns,\n",
         "                 netcons = spike_generator.netcons, spike_trains = spike_generator.spike_trains,\n",
         "                 spike_threshold = 10, random_state = random_state,\n",
@@ -573,7 +588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "hJHtZEcupk5x"
       },
@@ -678,7 +693,7 @@
       "metadata": {
         "id": "nJBe0MjyDMpN"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -692,7 +707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -722,12 +737,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "X7p40K3RO1RQ"
       },
       "outputs": [],
       "source": [
+        "# extracellular probe recording\n",
         "from cell_inference.config import params, paths\n",
         "from cell_inference.cells.activecell_axon import ReducedOrderL5Cell, ReducedOrderL5CellPassiveDendrite\n",
         "from cell_inference.utils.currents.ecp import EcpMod\n",
@@ -740,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "m_npKvVUO4JD"
       },
@@ -765,7 +781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "8fdb0017"
       },
@@ -781,7 +797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -826,7 +842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -945,7 +961,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1093,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1227,7 +1243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1263,7 +1279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1348,7 +1364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "56ptxRsJKoP3"
       },
@@ -1387,7 +1403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "-s7SWZCCKoP5"
       },
@@ -1406,7 +1422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "irYycM76KoP-"
       },
@@ -1419,7 +1435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "fiRwl5mUKoQA"
       },
@@ -1432,7 +1448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "10zqh-dSKoQB"
       },
@@ -1455,7 +1471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1479,7 +1495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1502,7 +1518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1525,7 +1541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1561,7 +1577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "JFCdMsNZAP2X"
       },
@@ -1576,7 +1592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "r4i-7Ie160Xp"
       },
@@ -1592,7 +1608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "EuPKLRFiYEKe"
       },
@@ -1605,7 +1621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "KCctGQ3vaaDj"
       },
@@ -1617,7 +1633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "wUrVa2VsZzS8"
       },
@@ -1644,7 +1660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "m8i0GgIbzZr2",
         "colab": {
@@ -1691,7 +1707,7 @@
         "id": "-giSGlY10y6S",
         "outputId": "b59ab448-1cb3-47a5-93c4-53e1514298b0"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
