update cluster_synapses call

--- a/Clustering_Simulation.ipynb
+++ b/Clustering_Simulation.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/davidfague/Neural-Modeling/blob/cluster-dev/Clustering_Simulation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/davidfague/Neural-Modeling/blob/main/Clustering_Simulation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -511,7 +511,7 @@
       "cell_type": "code",
       "source": [
         "%%time\n",
-        "synapse_cluster_map, seg_info_map = cluster_synapses(synapses=all_syns, n_clusters=2, use_euclidean=True)"
+        "synapse_cluster_map, seg_info_map = cluster_synapses(synapses=all_syns, n_clusters=2, seg_info_list=cell.seg_info, use_euclidean=True)"
       ],
       "metadata": {
         "id": "JXMsLEoLyji-"
