try reduce_cell_func

--- a/Functional_Groups_Simulation.ipynb
+++ b/Functional_Groups_Simulation.ipynb
@@ -567,7 +567,8 @@
       "cell_type": "code",
       "source": [
         "# use CellModel class to store and record simulation data.\n",
-        "cell = reductor.reduce_cell_func(complex_cell=complex_cell, reduce_cell=True, synapses_list=all_syns,\n",
+        "reduce_cell, expand_cable = True, True\n",
+        "cell = reductor.reduce_cell_func(complex_cell=complex_cell, reduce_cell=reduce_cell, synapses_list=all_syns,\n",
         "                                 netcons_list=spike_generator.netcons, spike_trains=spike_generator.spike_trains,\n",
         "                                 spike_threshold=10, random_state=random_state,\n",
         "                                 var_names=['gNaTa_t_NaTa_t', 'ina_NaTa_t', 'gNap_Et2_Nap_Et2', 'ina_Nap_Et2',\n",
@@ -575,7 +576,7 @@
         "                                            'ica_Ca_HVA', 'ica_Ca_LVAst',\n",
         "                                            'ihcn_Ih',\n",
         "                                            'i_pas'],\n",
-        "                                 reduction_frequency=0, expand_cable=True, choose_branches=22)"
+        "                                 reduction_frequency=0, expand_cable=expand_cable, choose_branches=22)"
       ],
       "metadata": {
         "id": "iiyMlYKmo6Fk"
@@ -589,17 +590,17 @@
         "# find segments of interest\n",
         "soma_seg_index = cell.segments.index(cell.soma[0](0.5))\n",
         "axon_seg_index = cell.segments.index(cell.axon[-1](0.9))\n",
-        "basal_seg_index = cell.segments.index(basals[0](0.5))\n",
+        "basal_seg_index = cell.segments.index(cell.basals[0](0.5))\n",
         "trunk_seg_index = cell.segments.index(cell.apic[0](0.999))\n",
         "# find tuft and nexus\n",
         "if (reduce_cell == True) and (expand_cable == True): # Dendritic reduced model\n",
-        "\ttuft_seg_index = tuft_seg_index=cell.segments.index(tufts[0](0.5)) # Otherwise tufts[0] will be truly tuft section and the segment in the middle of section is fine\n",
+        "\ttuft_seg_index = tuft_seg_index=cell.segments.index(cell.tufts[0](0.5)) # Otherwise tufts[0] will be truly tuft section and the segment in the middle of section is fine\n",
         "\tnexus_seg_index = cell.segments.index(cell.apic[0](0.99))\n",
         "elif (reduce_cell == True) and (expand_cable == False): # NR model\n",
-        "\ttuft_seg_index = cell.segments.index(tufts[0](0.9)) # tufts[0] will be the cable that is both trunk and tuft in this case, so we have to specify near end of cable\n",
+        "\ttuft_seg_index = cell.segments.index(cell.tufts[0](0.9)) # tufts[0] will be the cable that is both trunk and tuft in this case, so we have to specify near end of cable\n",
         "\tnexus_seg_index = cell.segments.index(cell.apic[0](0.289004))\n",
         "else: # Complex cell\n",
-        "\ttuft_seg_index=cell.segments.index(tufts[0](0.5)) # Otherwise tufts[0] will be truly tuft section and the segment in the middle of section is fine\n",
+        "\ttuft_seg_index=cell.segments.index(cell.tufts[0](0.5)) # Otherwise tufts[0] will be truly tuft section and the segment in the middle of section is fine\n",
         "\tnexus_seg_index=cell.segments.index(cell.apic[36](0.961538))\n",
         "# compute electrotonic distances from nexus\n",
         "cell.recompute_segment_elec_distance(segment = cell.segments[nexus_seg_index], seg_name = \"nexus\")"
