--- a/Tiesinga_Functional_Groups_Simulation.ipynb
+++ b/Tiesinga_Functional_Groups_Simulation.ipynb
@@ -1433,8 +1433,8 @@
         }
       ],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ]
     },
     {
@@ -1457,7 +1457,7 @@
         }
       ],
       "source": [
-        "%cd .."
+        "# %cd .."
       ]
     },
     {
@@ -1480,7 +1480,7 @@
         }
       ],
       "source": [
-        "%cd drive/MyDrive/"
+        "# %cd drive/MyDrive/"
       ]
     },
     {
@@ -1506,17 +1506,17 @@
         }
       ],
       "source": [
-        "# save data\n",
-        "print(datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"),\"Saving Simulation data\")\n",
+        "# # save data\n",
+        "# print(datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"),\"Saving Simulation data\")\n",
         "\n",
-        "save_start_time = time.time()\n",
-        "data_dict=cell.get_recorder_data() #also creates directory # update to remove folder first\n",
-        "save_end_time = time.time()\n",
+        "# save_start_time = time.time()\n",
+        "# data_dict=cell.get_recorder_data() #also creates directory # update to remove folder first\n",
+        "# save_end_time = time.time()\n",
         "\n",
-        "elapsedtime = save_end_time - save_start_time\n",
-        "print('It took',round(elapsedtime),'sec to save simulation')\n",
-        "total_runtime = save_end_time - runtime_start_time\n",
-        "print('The total runtime was',round(total_runtime),'sec')"
+        "# elapsedtime = save_end_time - save_start_time\n",
+        "# print('It took',round(elapsedtime),'sec to save simulation')\n",
+        "# total_runtime = save_end_time - runtime_start_time\n",
+        "# print('The total runtime was',round(total_runtime),'sec')"
       ]
     },
     {
@@ -1622,7 +1622,7 @@
         }
       ],
       "source": [
-        "cell.write_seg_info_to_csv()"
+        "# cell.write_seg_info_to_csv()"
       ]
     },
     {
@@ -2090,19 +2090,19 @@
       ],
       "source": [
         "# show LFP and currents around APs # TODO: check units in modfiles\n",
-        "ylim = [-800, 1200] # can try doing min and max of seg coords\n",
-        "vlim = [-.023,.023]#'auto' # range for ECP heatmap\n",
-        "figsize=(8,5)#(4,3)\n",
-        "for AP_time in np.array(cell.spikes):# spike time (ms) #TODO: check\n",
-        "\tbefore_AP = AP_time - 0.5 # ms\n",
-        "\tafter_AP = AP_time + 3 # ms\n",
-        "\txlim = [before_AP, after_AP] # time range\n",
+        "# ylim = [-800, 1200] # can try doing min and max of seg coords\n",
+        "# vlim = [-.023,.023]#'auto' # range for ECP heatmap\n",
+        "# figsize=(8,5)#(4,3)\n",
+        "# for AP_time in np.array(cell.spikes):# spike time (ms) #TODO: check\n",
+        "# \tbefore_AP = AP_time - 0.5 # ms\n",
+        "# \tafter_AP = AP_time + 3 # ms\n",
+        "# \txlim = [before_AP, after_AP] # time range\n",
         "\n",
-        "  # TODO: Remove plot_simulation_results frmo plot_LFP_VM_CUrrents. Separate plotting LFP, Vm, Currents into it's own\n",
+        "#   # TODO: Remove plot_simulation_results frmo plot_LFP_VM_CUrrents. Separate plotting LFP, Vm, Currents into it's own\n",
         "\n",
-        "\tplot_LFP_Vm_currents(t, Vm, soma_seg_index, axon_seg_index, basal_seg_index, tuft_seg_index, nexus_seg_index, trunk_seg_index,\n",
-        "\t\t\t\t\t\t\tloc_param, lfp, elec_pos, plot_lfp_heatmap, plot_lfp_traces, xlim=xlim, ylim=ylim, figsize=figsize, vlim=vlim, data_dict = data_dict,\n",
-        "                      cmap='tab20')"
+        "# \tplot_LFP_Vm_currents(t, Vm, soma_seg_index, axon_seg_index, basal_seg_index, tuft_seg_index, nexus_seg_index, trunk_seg_index,\n",
+        "# \t\t\t\t\t\t\tloc_param, lfp, elec_pos, plot_lfp_heatmap, plot_lfp_traces, xlim=xlim, ylim=ylim, figsize=figsize, vlim=vlim, data_dict = data_dict,\n",
+        "#                       cmap='tab20')"
       ]
     }
   ],
