add pad aiv to the notebook

--- a/Tiesinga_Functional_Groups_Simulation.ipynb
+++ b/Tiesinga_Functional_Groups_Simulation.ipynb
@@ -439,6 +439,7 @@
         "P = 1\n",
         "CV_t = 1\n",
         "sigma_iv = 1\n",
+        "pad_aiv = 0\n",
         "\n",
         "# ----------\n",
         "\n",
@@ -467,7 +468,7 @@
         "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  spike_trains_to_delay = exc_spikes, fr_time_shift = 4,\n",
         "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  record = True, syn_mod = 'GABA_AB',\n",
         "                                                                          vector_length = h_tstop, method = \"gaussian\",\n",
-        "                                                                          tiesinga_params = (a_iv, P, CV_t, sigma_iv))\n"
+        "                                                                          tiesinga_params = (a_iv, P, CV_t, sigma_iv, pad_aiv))\n"
       ]
     },
     {
