--- a/Input_Generation.ipynb
+++ b/Input_Generation.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FT_duWUb4kVU"
       },
@@ -29,6 +29,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#Rhythmic Modulation"
+      ],
+      "metadata": {
+        "id": "8vUB7ADT7xUX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Setting parameters"
       ],
       "metadata": {
@@ -37,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "0vx2TiGS4kVW",
         "colab": {
@@ -68,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "ei-YHCr-4kVX"
       },
@@ -85,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "vdoVo9FD4kVX"
       },
@@ -147,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "E2Cyv93O4kVY"
       },
@@ -204,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "6NAQLE0o4kVY"
       },
@@ -269,7 +278,7 @@
       "metadata": {
         "id": "ReWo4PiUS_Sd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,7 +400,7 @@
         },
         "outputId": "0ac0ac1a-2141-4fd0-e055-afe6a185aecf"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -483,7 +492,7 @@
           "height": 577
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -531,7 +540,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +576,7 @@
       "metadata": {
         "id": "TRR0e-baKyR7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +589,7 @@
       "metadata": {
         "id": "NT61S6oTS3rN"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +641,7 @@
       "metadata": {
         "id": "PygvK2FYMEro"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -652,8 +661,17 @@
       "metadata": {
         "id": "7bMo2AdJRdiY"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1/f Noise Modulation"
+      ],
+      "metadata": {
+        "id": "hJijBcU377BW"
+      }
     },
     {
       "cell_type": "markdown",
@@ -677,7 +695,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +724,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +754,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +783,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +802,7 @@
       "metadata": {
         "id": "K-LPzuhkunHy"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -795,7 +813,7 @@
       "metadata": {
         "id": "w5RakwkxuqUL"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -806,7 +824,7 @@
       "metadata": {
         "id": "hVLloIv8tAw-"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -817,7 +835,7 @@
       "metadata": {
         "id": "VdrBjaJMsibK"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -831,7 +849,7 @@
       "metadata": {
         "id": "jFJ8dZZMuXW4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -842,7 +860,7 @@
       "metadata": {
         "id": "RzLbXyegsrnd"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -854,7 +872,7 @@
       "metadata": {
         "id": "kXHiZxXlpYyK"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -867,7 +885,7 @@
       "metadata": {
         "id": "C6InE_mbqO0C"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -880,7 +898,7 @@
       "metadata": {
         "id": "sr5ZJ7aOqduc"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -902,7 +920,7 @@
       "metadata": {
         "id": "utunkoMFq0HA"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,7 +977,7 @@
       "metadata": {
         "id": "8sEAsYR8r8XI"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -975,7 +993,7 @@
           "height": 447
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1032,13 @@
         "# combine modulatory trace with presynaptic cell mean firing rate\n",
         "spikes = spikegen.generate_spikes_from_profile(fr_profile, mean_fr, random_state)\n",
         "spikes = spikes*dt # convert from timestamps to ms\n",
-        "# print(spikes)"
+        "# print(spikes)\n",
+        "\n",
+        "# def generate_spikes_from_profile(self, fr_profile: np.ndarray, mean_fr: float, random_state: np.random.RandomState) -> np.ndarray:\n",
+        "#   fr_profile = fr_profile * mean_fr\n",
+        "#   sample_values = random_state.poisson(fr_profile / 1000)\n",
+        "#   spike_times = np.where(sample_values > 0)[0]\n",
+        "#   return spike_times"
       ],
       "metadata": {
         "id": "DilQ4Wbjr1in",
@@ -1023,7 +1047,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,7 +1072,7 @@
           "height": 447
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1086,7 +1110,7 @@
       "metadata": {
         "id": "tzliFD1zsuO0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1112,7 +1136,7 @@
           "height": 472
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1169,7 +1193,7 @@
           "height": 410
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1217,7 +1241,7 @@
           "height": 410
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1275,7 +1299,7 @@
           "height": 549
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1323,7 +1347,7 @@
           "height": 410
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1379,7 +1403,7 @@
           "height": 388
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1428,7 +1452,7 @@
           "height": 546
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
