--- a/Input_Generation.ipynb
+++ b/Input_Generation.ipynb
@@ -1034,11 +1034,14 @@
         "spikes = spikes*dt # convert from timestamps to ms\n",
         "# print(spikes)\n",
         "\n",
-        "# def generate_spikes_from_profile(self, fr_profile: np.ndarray, mean_fr: float, random_state: np.random.RandomState) -> np.ndarray:\n",
-        "#   fr_profile = fr_profile * mean_fr\n",
-        "#   sample_values = random_state.poisson(fr_profile / 1000)\n",
-        "#   spike_times = np.where(sample_values > 0)[0]\n",
-        "#   return spike_times"
+        "def generate_spikes_from_profile(self, fr_profile: np.ndarray, mean_fr: float, random_state: np.random.RandomState) -> np.ndarray:\n",
+        "  '''\n",
+        "  sample from a poisson distribution representing the instantaneous firing rate at each time point to generate a spike train.\n",
+        "  '''\n",
+        "  fr_profile = fr_profile * mean_fr\n",
+        "  sample_values = random_state.poisson(fr_profile / 1000)\n",
+        "  spike_times = np.where(sample_values > 0)[0]\n",
+        "  return spike_times"
       ],
       "metadata": {
         "id": "DilQ4Wbjr1in",
